--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@
 }
 
 #navbar__logo{
-    background-color: #ff8177;
+    background-color: #385f86;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     background-image: linear-gradient(to top,#ff0844 #ffb999 100%);
     background-size: 100%;
     -webkit-background-clip: text;
@@ -214,9 +215,96 @@
         transform: translateY(-8px) rotate(-45deg);
     }
    
-   
+    
+}
+.main{
+    background-color: #141414;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 90vh;
+    background-color: #141414;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
 
-   
+}
+.main__content h1{
+    font-size: 4rem;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #ffffff;
+    background-image: linear-gradient(to top, #535050 0%, #ffb12121 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color:transparent;
+
+}
+.main__content h2{
+    font-size: 4rem;
+    background-color: hsl(225, 64%, 67%);
+    background-image: linear-gradient(to top, #ff0000 0%, #ffffff21 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color:transparent;
+
+
+}
+.main__content p{
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+    color: #fff;
 
     
 }
+.main__btn {
+    font: 1em sans-serif;
+    background-image: linear-gradient(to top, #f77062 0%, #fe5299 100%);
+    padding: 14px 32px;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    margin-top: 2rem;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.35s;
+    outline: none;
+}
+.main__btn a{
+    position: relative;
+    z-index: 2;
+    color: #fff;
+    text-decoration: none;
+
+}
+.main__btn:after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width:0;
+    height: 0;
+    background-color: #4837ff;
+    transition: all 0.35s;
+    border-radius: 4px;
+
+}
+ .main__btn:hover{
+    color: #fff;
+
+ }
+ .main__btn:hover:after{
+    width: 100%;
+
+ }
+ .main__img--container{
+    text-align: center;
+
+ }
