--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@
         margin: 0;
         width: 100%;
         position: absolute;
-        top:-1000px;
+        top: -1000px;
         opacity: 0; 
         transition: all 0.5s ease;
         height: 50vh;
@@ -141,7 +141,7 @@
 
 
     }
-    .navbar__menu.active{
+    .navbar__menu.active {
         background-color: #131313;
         top: 100px;
         opacity: 1;
@@ -219,6 +219,8 @@
 }
 .main{
     background-color: #141414;
+}
+.main__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -230,7 +232,6 @@
     width: 100%;
     max-width: 1300px;
     padding: 0 50px;
-
 }
 .main__content h1{
     font-size: 4rem;
@@ -265,7 +266,7 @@
     
 }
 .main__btn {
-    font: 1em sans-serif;
+    font: 1em;
     background-image: linear-gradient(to top, #f77062 0%, #fe5299 100%);
     padding: 14px 32px;
     color: #fff;
@@ -290,7 +291,7 @@
     top: 0;
     left: 0;
     width:0;
-    height: 0;
+    height: 100;
     background-color: #4837ff;
     transition: all 0.35s;
     border-radius: 4px;
@@ -308,3 +309,47 @@
     text-align: center;
 
  }
+
+ #main__img{
+    height: 80%;
+    width: 80%;
+ }
+
+ /*Mobile Responsive*/
+
+ @media screen and(max-width: 768px) {
+    .main__container{
+        display: grid;
+        grid-template-columns: auto;
+        align-items: center;
+        justify-self: center;
+        width: 100%;
+        margin: 0 auto;
+        height: 90vh;
+
+    }
+    
+    .main__content{
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+
+    .main__content h1{
+        font-size: 2.5rem;
+        margin-top: 2rem;
+
+    }
+    .main__content h2{
+        font-size: 3rem;
+
+    }
+    .main__content p{
+        margin-top: 1rem;
+        font-size: 1.5rem;
+
+ }
+}
+    
+    
+   
+
