--- a/styles.css
+++ b/styles.css
@@ -334,22 +334,169 @@
         margin-bottom: 4rem;
     }
 
-    .main__content h1{
+    .main__content h1 {
         font-size: 2.5rem;
         margin-top: 2rem;
 
     }
-    .main__content h2{
+    .main__content h2 {
         font-size: 3rem;
 
     }
-    .main__content p{
+    .main__content p {
         margin-top: 1rem;
         font-size: 1.5rem;
 
  }
-}
-    
-    
-   
 
+}
+
+@media screen and (max-width: 480px) {
+    .main__content h1 {
+        font-size: 2rem;
+        margin-top: 3rem;
+
+    }
+    .main__content h2 {
+        font-size: 2rem;
+
+    }
+    .main__content p {
+        margin-top: 2rem;
+        font-size: 1.5rem;
+
+ } 
+ .main__btn{
+    padding: 12px 36px;
+    margin: 2.5rem 0;
+ }
+}
+
+/*Services SEction CSS */
+
+.services{
+    background: #141414;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100hv;
+
+}
+
+.services h1 {
+    background-color: #ff8177;
+    background-image: linear-gradient(
+        to right  #ff8177 0%,
+         #ff867a 0%,
+          #ff8c7f 21%,
+           #f99185 52%,
+            #cf556c 78%,
+             #b1285b 100% 
+
+
+ );
+background-size: 100%;
+margin-bottom: 5rem;
+font-size: 2.5rem;
+-webkit-background-clip: text;
+-moz-background-clip: text;
+-webkit-text-fill-color: transparent;
+-moz-text-fill-color:transparent;
+
+}
+
+.services__container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+
+}
+
+.services__card {
+    margin: 1rem;
+    height: 525px;
+    width: 400px;
+    border-radius: 4px;
+    background-image: linear-gradient(to bottom,
+     rgba(0,0,0,0) 0%,
+     rgba(17,17,0.6) 100% ), 
+     url(/foto/pic3.jpg);
+    background-size: cover;
+    position: relative;
+    color: #fff;
+}
+
+.services__card:nth-child(2) {
+    background-image: linear-gradient(to bottom,
+    rgba(0,0,0,0) 0%,
+    rgba(17,17,0.6) 100% ), 
+    url(/foto/pic5.jpg);
+}
+
+.services h2 {
+    position: absolute;
+    top: 350px;
+    left: 30px;
+
+
+}
+.services__card p {
+    position: absolute;
+    top: 400px;
+    left: 30px;
+
+
+}
+.services__card button {
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background: #f77062;
+    position: absolute;
+    top: 440px;
+    left: 30px;
+    font-size: 1rem;
+    cursor: pointer;
+
+}
+
+.services__card:hover {
+    transform: scale(1.075);
+    transition: 0.2 easa-in;
+    cursor: pointer;
+
+
+}
+
+@media screen and (max-width:960px){
+    .services{
+        height: 1600px;
+    }
+
+    .services h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+    }
+    
+}
+
+
+@media screen and (max-width:480px){
+    .services{
+        height: 1400px;
+    }
+
+    .services h1 {
+        font-size: 1.2rem;
+
+    }
+    .services__card {
+        width: 300px;
+    }
+}
+
+
+/*Footer Css */
