--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@
 
     
 }
-.main__btn {
+.main_btn {
     font: 1em;
     background-image: linear-gradient(to top, #f77062 0%, #fe5299 100%);
     padding: 14px 32px;
